# BSS-using-FastICA-in-C

./: CMakeLists.txt  README.md  algo.c  audio.c  audio_test.c  definitions.h  generals.c  headers.h  linalg.c  main.c  matrix.c  waveform_test.c
gsl/: gsl_types.h
lib/: gsl.lib  gslcblas.lib  portaudio.lib
logs/py output/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt
logs/test/: actual_signal.txt  output_signal.txt
py/: load_data.py  save_data.py
